--- a/src/app/components/landpage/landpage.component.html
+++ b/src/app/components/landpage/landpage.component.html
@@ -1,28 +1,10 @@
 <div class="container">
-  <div class="navbar is-link" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="">
-        <img src="../../../assets/discount.svg" alt="" height="50" width="50" />
-      </a>
-    </div>
-
-    <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item" RouterLink="/home">
-          Home
-        </a>
-      </div>
-      <div *ngIf="isUserLoggedIn" class="navbar-end">
-        <a [routerLink]="['/']" (click)="userLogout()">Sair</a>
-        <p class="navbar-item">Olá, {{ getCurrentLoggedUserName }}</p>
-      </div>
-    </div>
-  </div>
+  <app-navbar></app-navbar>
   <div class="columns">
     <section class="section column">
       <h1 class="title">Venda interna</h1>
       <h2 class="subtitle">
-        Simples aplicativo web para gerênciar vendas internas de sua empresa!
+        Um simples aplicativo web para gerênciar vendas internas de sua empresa!
       </h2>
     </section>
 
